[[feature]] Export-Funktion für Hinweise, für die eine automatisierte Ersetzung sicher möglich ist

--- a/css/win/win.css
+++ b/css/win/win.css
@@ -300,6 +300,15 @@ section.trans-linear {
   outline-offset: -2px;
 }
 
+a.icon#hint-export {
+  display: none;
+  margin-left: 40px;
+}
+
+#sorting:has(#sorting-filter-cont.hints-view) #hint-export {
+  display: inline-block;
+}
+
 /* Clusters */
 
 #clusters-nav #clusters-nav-preview {
