[[update]] Die Vorlage für die Arikelübersicht wurde an Änderungen auf zdl.org angepasst.

--- a/resources/artikel.tt
+++ b/resources/artikel.tt
@@ -37,7 +37,7 @@
   </ol>
 </nav>
 
-<main class="wgd-content shadow">
+<main class="wgd-content wgd-init shadow">
 
 <header>
   <h1>Artikelübersicht<br>von <i>Wortgeschichte digital</i></h1>
