--- a/css/app/bars.css
+++ b/css/app/bars.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+@charset "UTF-8";
 
 
 /* BARS ----------------------------------------- */
@@ -38,8 +38,7 @@
 
 :is(#filters, #results) > div {
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden auto;
   overscroll-behavior: contain;
 }
 
