--- a/css/app/main.css
+++ b/css/app/main.css
@@ -1,4 +1,16 @@
-@charset "utf-8";
+@charset "UTF-8";
+
+@import url(../animations.css);
+@import url(../form.css);
+@import url(../global.css);
+@import url(../overlay.css);
+@import url(../variables.css);
+@import url(bars.css);
+@import url(overlay.css);
+@import url(viewClusters.css);
+@import url(viewHints.css);
+@import url(viewSearch.css);
+@import url(viewXml.css);
 
 .scrollable {
   overflow-y: scroll;
@@ -338,7 +350,7 @@ a.icon#hint-export {
 /* Search Form */
 
 #bar > div#search-form {
-  padding-left: 1px; /* BUG: sonst wird der outline links um 1px abgeschnitten */
+  padding-left: 1px; /* sonst wird der outline links um 1px abgeschnitten */
   height: auto;
 }
 
