--- a/css/app/viewClusters.css
+++ b/css/app/viewClusters.css
@@ -1,8 +1,9 @@
-@charset "utf-8";
+@charset "UTF-8";
 
 #clusters {
   max-width: 2000px;
 }
+
 
 /* MODULATE ------------------------------------- */
 
