--- a/css/overlay.css
+++ b/css/overlay.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+@charset "UTF-8";
 
 .overlay {
   position: fixed;
@@ -76,7 +76,7 @@
   top: 80px;
   border-radius: 10px;
   padding-left: 82px;
-  background-image: url(../../img/win/dialog-alert.svg);
+  background-image: url(../img/win/dialog-alert.svg);
   background-position: 5px 5px;
   background-repeat: no-repeat;
   background-size: 72px 72px;
@@ -87,7 +87,7 @@
 }
 
 #dialog[data-type="confirm"].overlay > div {
-  background-image: url(../../img/win/dialog-confirm.svg);
+  background-image: url(../img/win/dialog-confirm.svg);
 }
 
 #dialog > div > a {
