--- a/css/win/about.css
+++ b/css/win/about.css
@@ -1,4 +1,9 @@
-@charset "utf-8";
+@charset "UTF-8";
+
+@import url(../global.css);
+@import url(../overlay.css);
+@import url(../variables.css);
+
 
 /* MAIN ----------------------------------------- */
 
