--- a/css/win/help.css
+++ b/css/win/help.css
@@ -1,4 +1,11 @@
-@charset "utf-8";
+@charset "UTF-8";
+
+@import url(../animations.css);
+@import url(../form.css);
+@import url(../global.css);
+@import url(../overlay.css);
+@import url(../variables.css);
+
 
 /* FRAME ---------------------------------------- */
 
@@ -443,7 +450,7 @@ section li {
   color: var(--textGrey);
 }
 
-@media (max-width: 850px) {
+@media (width <= 850px) {
   #search-results {
     display: none;
   }
