--- a/css/win/pv.css
+++ b/css/win/pv.css
@@ -1,4 +1,10 @@
-@charset "utf-8";
+@charset "UTF-8";
+
+@import url(../animations.css);
+@import url(../global.css);
+@import url(../overlay.css);
+@import url(../variables.css);
+
 
 /* HEADER --------------------------------------- */
 
