--- a/css/win/pvWebview.css
+++ b/css/win/pvWebview.css
@@ -1,4 +1,9 @@
-@charset "utf-8";
+@charset "UTF-8";
+
+@import url(../animations.css);
+@import url(../global.css);
+@import url(../variables.css);
+
 
 /* LOADING -------------------------------------- */
 
